# ping-pong-SDL3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ball.hpp  entity.hpp  player.hpp  pong.hpp  utils.hpp  vector.hpp
scripts/: install.sh
src/: CMakeLists.txt  ball.cpp  entity.cpp  main.cpp  player.cpp  pong.cpp  utils.cpp  vector.cpp
